Import of ABBYPAN/SimpleR-Stat-0.06 from CPAN.
gitpan-cpan-distribution: SimpleR-Stat
gitpan-cpan-version:      0.06
gitpan-cpan-path:         ABBYPAN/SimpleR-Stat-0.06.tar.gz
gitpan-cpan-author:       ABBYPAN
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -4,8 +4,18 @@ license = Perl_5
 copyright_holder = abbypan
 copyright_year   = 2013
 
-version = 0.05
+version = 0.06
 
 [@Basic]
 RELEASE_TESTING=0
 
+[Prereqs]
+Tie::IxHash=0
+Tie::Autotie=0
+
+[MetaResources]
+repository.web = https://github.com/abbypan/SimpleR-Stat
+repository.url = https://github.com/abbypan/SimpleR-Stat.git
+repository.type = git
+ 
+[MetaJSON]
