--- a/META.yml
+++ b/META.yml
@@ -4,12 +4,17 @@ author:
   - 'abbypan <abbypan@gmail.com>'
 build_requires: {}
 configure_requires:
-  ExtUtils::MakeMaker: 6.30
+  ExtUtils::MakeMaker: '6.30'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 5.006, CPAN::Meta::Converter version 2.130880'
+generated_by: 'Dist::Zilla version 5.019, CPAN::Meta::Converter version 2.140640'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: SimpleR-Stat
-version: 0.05
+requires:
+  Tie::Autotie: '0'
+  Tie::IxHash: '0'
+resources:
+  repository: https://github.com/abbypan/SimpleR-Stat.git
+version: '0.06'
